Made IR tree fully mutable
Checking SSA transform